--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,6 +32,9 @@ import Layout from '../layouts/Layout.astro';
                 align-items: center;
                 background: #fff;
             }
+            .app-card p {
+                color: #5a6e7a; /* blue-grey */
+            }
             .app-image {
                 width: 100%;
                 max-width: 200px;
